deployment/golem-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golem-century
  namespace: golem
  labels:
    app: golem-century
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: golem-century
