deployment/golem-app/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: golem-backend-route
  labels:
    app: golem
    tier: backend
spec:
  parentRefs:
  - name: main-gateway
    namespace: nginx-gateway
  hostnames:
  - "game.anhtran.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/golem
    backendRefs:
    - name: golem-century
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: golem-frontend-route
  labels:
    app: golem
    tier: frontend
spec:
  parentRefs:
  - name: main-gateway
    namespace: nginx-gateway
  hostnames:
  - "game.anhtran.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /apps/golem
    backendRefs:
    - name: golem-nginx
      port: 80
